<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/green_round_corners_rectangle"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="text"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toStartOf="@id/filter_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_hint"
            app:theme="@style/Theme.FPLAssistant.SearchView" />

        <ImageButton
            android:id="@+id/filter_btn"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/filter_button_desc"
            android:src="@drawable/ic_filter"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/sorted_by_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/sorted_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <TextView
        android:id="@+id/sorted_by_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toEndOf="@id/sorted_by_title"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        tools:text="Price" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sorted_by_title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/players_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/players_list_item" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>